Sat Feb 26 14:38:46 2005  Arvind S. Krishna  <arvindk@tango.dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedED.mpc:
	* examples/handcrafted/BasicSP_EC/BMDevice/BMDevice.mpc:
	* examples/handcrafted/BasicSP_EC/BMDisplay/BMDisplay.mpc:
	* examples/handcrafted/BasicSP_EC/EC/EC.mpc:
	* examples/handcrafted/BasicSP_EC/BasicSP.mpc:
	* examples/handcrafted/BasicSP_EC2/BMClosedED/BMClosedED.mpc:
	* examples/handcrafted/BasicSP_EC2/BMDevice/BMDevice.mpc:
	* examples/handcrafted/BasicSP_EC2/BMDisplay/BMDisplay.mpc:
	* examples/handcrafted/BasicSP_EC2/EC/EC.mpc:
	* examples/handcrafted/BasicSP_EC2/RTEventService/RTEventService.mpc:
	* examples/handcrafted/BasicSP_EC2/BasicSP.mpc:

	  Replaced all occurances of "dummy" with "dummy_label"

	* bin/replace_dummy_with_dummylabel.sh:
	  
	  Shell script that can be used to do this. In case people find it
	  useful. 
	

Tue Feb 22 09:55:51 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/TypeNameEmitter.cpp:
        
          Fixed typos in code generation that were omitting a space
          between the type name and '_ciao_extract_val' for enums,
          structs and unions when used as component or home attributes.
          Thanks to Steve Baker <steven_d_baker@raytheon.com> for
          reporting the bug with enums.

Fri Feb 18 10:11:12 UTC 2005 Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ciao/Servant_Activator.h:
        * ciao/Servant_Activator.h:
          Added missing includes because of POA refactoring

Thu Feb 17 14:04:12 UTC 2005 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Component_Base.idl:
          Fixed typo in include of orb.idl. Thanks to Roland Schimmack
          <Roland dot Schimmack at gmx dot de> for reporting this

Tue Feb 15 22:43:34 2005 Arvind S. Krishna <arvindk@dre.vanderbilt.edu>

        * DAnCE/examples/BasicSP/BMDisplay_exec.h:

	  Added missing export file to make things compile on Windows